--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,13 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
+    <scm>
+        <url>https://github.com/isabellaflores/vamos</url>
+        <connection>scm:git:git://github.com/isabellaflores/vamos.git</connection>
+        <developerConnection>scm:git:git@github.com:isabellaflores/vamos.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
+
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
