--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
 
     <groupId>org.example</groupId>
     <artifactId>vamos-installer</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <scm>
         <url>https://github.com/isabellaflores/vamos</url>
         <connection>scm:git:git://github.com/isabellaflores/vamos.git</connection>
         <developerConnection>scm:git:git@github.com:isabellaflores/vamos.git</developerConnection>
-        <tag>vamos-installer-1.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <properties>
